# FightPredix

./: .coverage  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.streamlit/: config.toml
Data/: final_tapology.json
FightPredixApp/: FPA.py  FPA2.py  README.md  __init__.py  app.py  lib_streamlit.py  pyproject.toml  style.py
FightPredixApp/.streamlit/: config.toml
FightPredixApp/Data/: Data_jointes.csv  Data_jointes_cplt.csv  Data_ufc_combats.csv  Data_ufc_fighters.csv
FightPredixApp/DataApp/: Data_final_combats.json  Data_final_fighters.json  Data_final_fighters_V.csv
FightPredixApp/ModelApp/: best_model.pkl
FightPredixApp/pages/: FPA.py  FPA2.py  __init__.py  predictions.py
FightPredixApp/tests/: test_acces_app.py
FightPredixBack/: README.md  hello.py  outils.py  pyproject.toml
FightPredixBack/Data/: Data_ufc_combats_complet.json  Data_ufc_combattant_complet.json
FightPredixBack/FightPredixConstructeur/: README.md  __init__.py  __main__.py  lib_constructeur.py  lib_nettoyage_avant_preprocess.py  lib_stats.py
FightPredixBack/FightPredixConstructeur/dico_formatage/: dico_var.json
FightPredixBack/FightPredixConstructeur/tests/: test_constructeur.py
FightPredixBack/FightPredixML/: README.md  __init__.py  __main__.py  grille_de_parametres.py  lib_optimisation.py  opitmiser_boosting.py  opitmiser_random_forest.py  opitmiser_regression_logistique.py  optimiser_neural_network.py  optimiser_svm.py  preparer_echantillons.py  selectionner_modele.py
FightPredixBack/FightPredixML/select_best_model/: __main__.py
FightPredixBack/FightPredixML/tests/: test_selectionner_modele.py
FightPredixBack/FightPredixScraping/: README.md  __init__.py  __main__.py  lib_arbitre.py  lib_combats.py  lib_front_page_ufc.py  lib_join_ufc_tapology.py  lib_nettoyage_tapology.py  lib_page_combattant_ufc.py  lib_scraping_tapology.py  lib_ufc_stats.py
FightPredixBack/FightPredixScraping/scraping/: lib_combats.py  lib_front_page_ufc.py  lib_join_ufc_tapology.py  lib_nettoyage_tapology.py  lib_ufc_stats.py
FightPredixBack/FightPredixScraping/temp_data/: clean_tapology.json
FightPredixBack/FightPredixScraping/tests/: test_arbitre.py  test_combats.py  test_front_page_ufc.py  test_nettoyage_tapology.py  test_page_combattant_ufc.py  test_scraping_tapology.py  test_ufc_stats.py
FightPredixBack/tests/tests_ML/: test_pipeline.py  test_preparer_echantillons.py  test_selectionner_modele.py
FightPredixBack/tests/tests_constructeur/: test_constructeur.py  test_stats.py
FightPredixBack/tests/tests_scraping/: fixtures.py  test_arbitre.py  test_combats.py  test_front_page_ufc.py  test_nettoyage_tapology.py  test_page_combattant_ufc.py  test_scraping_tapology.py  test_ufc_stats.py
FightPredixBack/tests/tests_scraping/data_test/: data_tapology_test.json
FightPredixML/: pyproject.toml
FightPredixML/lib_ML/: __main__.py  lib_SVM.py  lib_nettoyage_avant_preprocess.py  lib_neural_network.py  main_SVM.py  main_neural_network.py
FightPredixML/select_best_model/: __init__.py  __main__.py  grille_de_parametres.py  lib_nettoyage_avant_preprocess.py  lib_process_avant_model.py  opitmiser_boosting.py  opitmiser_random_forest.py  opitmiser_regression_logistique.py  optimiser_naive_bayes.py  optimiser_neural_network.py  optimiser_svm.py  preparer_echantillons.py  selectionner_modele.py
FightPredixML/tests/: test_preparer_echantillon.py  test_preparer_echantillons.py  test_selectionner_modele.py
FightPredix_scraping/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
FightPredix_scraping/scraping/: __init__.py  __main__.py  lib_arbitre.py  lib_caracteristic_collector.py  lib_clean_tapology.py  lib_combats.py  lib_constructeur.py  lib_front_page.py  lib_join_ufc_tapology.py  lib_scraping_tapology.py  lib_stats.py  lib_ufc_stats.py  outils.py
FightPredix_scraping/scraping/dico_formatage/: dico_correction.json  dico_var.json
FightPredix_scraping/tests/: fixtures.py  test_arbitre.py  test_caracteristics_collection.py  test_clean_tapology.py  test_combats.py  test_constructeur.py  test_front_page.py  test_scraping_tapology.py  test_stats.py  test_ufc_stats.py
FightPredix_scraping/tests/data_test/: data_tapology_test.json
(+50 files in other folders)
