[project]
name = "fightpredixapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]
