[project]
name = "fightpredixapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=5.24.1",
    "rapidfuzz>=3.11.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "types-requests>=2.32.0.20241016",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]
