[project]
name = "fightpredixback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "geopy>=2.4.1",
    "joblib>=1.4.2",
    "logging>=0.4.9.6",
    "miceforest>=6.0.3",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "rapidfuzz>=3.11.0",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "selenium>=4.27.1",
    "typing>=3.10.0.0",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]
