[project]
name = "FightPredix_scraping"
version = "0.1.0"
description = "Package de Web scraping visant à collecter plusieurs types de données sur les combattants de l'UFC"
authors = ["Jaillet Grégory and Cochereau Hugo"]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "geopy>=2.4.1",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "rapidfuzz>=3.11.0",
    "selenium>=4.27.1",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "black>=24.10.0",
    "ruff>=0.8.2",
    "pre-commit>=4.0.1",
    "flake8>=7.1.1",
]


[tool.ruff]
per-file-ignores = { "FightPredix_scraping/tests/*" = ["F401", "F811"], "FightPredix_scraping/scraping/__init__.py" = ["F401", "F811"]}
